[gd_scene load_steps=5 format=3 uid="uid://ds7jatgbi07fv"]

[ext_resource type="PackedScene" uid="uid://dsmra417pedqn" path="res://BoardParts/plan_base.tscn" id="1_5pth7"]
[ext_resource type="StyleBox" uid="uid://ce52ar8aullls" path="res://UI/StyleBox/card_normal.tres" id="2_w7knq"]
[ext_resource type="Script" uid="uid://ud36gvjexsgn" path="res://BoardParts/ZoomArea/plan_zoom.gd" id="2_y5obq"]
[ext_resource type="PackedScene" uid="uid://beds0uld2gt6j" path="res://UI/Icons/activation_icons.tscn" id="4_w021b"]

[node name="PlanZoom" instance=ExtResource("1_5pth7")]
theme_override_styles/panel = ExtResource("2_w7knq")
script = ExtResource("2_y5obq")

[node name="AcquireIcons" parent="MarginContainer/VSplitContainer/Activations/Acquire_BG" index="0" instance=ExtResource("4_w021b")]
unique_name_in_owner = true
layout_mode = 1

[node name="ActionIcons" parent="MarginContainer/VSplitContainer/Activations/Action_BG" index="0" instance=ExtResource("4_w021b")]
unique_name_in_owner = true
layout_mode = 1

[node name="RevealIcons" parent="MarginContainer/VSplitContainer/Activations/Reveal_BG" index="0" instance=ExtResource("4_w021b")]
unique_name_in_owner = true
layout_mode = 1

[node name="DiscardIcons" parent="MarginContainer/VSplitContainer/Activations/Discard_BG" index="0" instance=ExtResource("4_w021b")]
unique_name_in_owner = true
layout_mode = 1

[node name="TrashIcons" parent="MarginContainer/VSplitContainer/Activations/Trash_BG" index="0" instance=ExtResource("4_w021b")]
unique_name_in_owner = true
layout_mode = 1
